# Cavity_Kokkos

./: .gitignore  .gitmodules  CMakeLists.txt  MPI_Performance.xlsx  README.md  input.txt
cmake/: init_cuda.cmake  init_kokkos.cmake  init_options.cmake
src/: BaseSolver.cpp  CMakeLists.txt  global_class.h  global_func.hpp  global_setup.h  main.cpp
